# scribus-plugin-API

./: .gitignore  README-namespaces.md  README.md
documentation/: README.md  config.doxygen  config.qdocconf
src/: .CMakeLists.txt.swp  .scribusAPI.cpp.swp  .scribusAPIplugin.cpp.swp  .scribusAPIplugin.h.swp  CMakeLists.txt  document.cpp  document.h  item.cpp  item.h  scribus.h  scribusAPI.cpp  scribusAPI.h  scribusAPIDocument.cpp  scribusAPIDocument.h  scribusAPIDocumentItem.cpp  scribusAPIDocumentItem.h  scribusAPIDocumentItemFormatting.cpp  scribusAPIDocumentItemFormatting.h  scribusAPIDocumentItemText.cpp  scribusAPIDocumentItemText.h  scribusAPIDocumentItemTextFormatting.cpp  scribusAPIDocumentItemTextFormatting.h  scribusAPIplugin.cpp  scribusAPIplugin.h  string.h  textFormatting.h  textFrame.cpp  textFrame.h
