INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_SCRIBUSAPI_PLUGIN_MOC_CLASSES
  scribusAPIplugin.h
  scribusAPIDocument.h
  scribusAPIDocumentItem.h
  scribusAPIDocumentItemText.h
  scribusAPIDocumentItemTextFormatting.h
  scribusAPI.h
)

SET(SCRIBUS_SCRIBUSAPI_PLUGIN_SOURCES
  scribusAPIplugin.cpp
  scribusAPIDocument.cpp
  scribusAPIDocumentItem.cpp
  scribusAPIDocumentItemText.cpp
  scribusAPIDocumentItemTextFormatting.cpp
  scribusAPI.cpp
)

SET(SCRIBUS_SCRIBUSAPI_PLUGIN "scribusAPI")

QT5_WRAP_CPP(SCRIBUS_SCRIBUSAPI_PLUGIN_MOC_SOURCES ${SCRIBUS_SCRIBUSAPI_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_SCRIBUSAPI_PLUGIN} MODULE ${SCRIBUS_SCRIBUSAPI_PLUGIN_SOURCES} ${SCRIBUS_SCRIBUSAPI_PLUGIN_MOC_SOURCES} ${SCRIBUS_SCRIBUSAPI_PLUGIN_UI_CPP} ${SCRIBUS_SCRIBUSAPI_PLUGIN_UI_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_SCRIBUSAPI_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_SCRIBUSAPI_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_SCRIBUSAPI_PLUGIN} ${EXE_NAME})
